add class StreamTestOwn