@@ -1,9 +1,7 @@
 package avlyakulov.timur.epam.chapter_11.example.stream;
 
 import avlyakulov.timur.epam.chapter_11.example.iterator.OrderTypeHAS;
-import avlyakulov.timur.epam.chapter_11.example.iterator.OrderTypeIS;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,13 +17,15 @@ public class ListTransformation {
         type2.add("PLN");
         type2.add("CZK");
         type2.add("EUR");
+        System.out.println(type.getCurrencyNames());
+        System.out.println(type2.getCurrencyNames());
         List<OrderTypeHAS> orderTypes = List.of(type, type2);
-        List<String> currencyList = orderTypes.stream()
-                .map(o -> o.getCurrencyNames()) // -> Stream <List<String>>
-                .flatMap(o -> o.stream())// -> Stream <String>
-                .collect(Collectors.toList());
-        System.out.println(currencyList);
-
+        System.out.println(orderTypes);
+        List<String> currencyListOfStrings = orderTypes.stream()
+                .map(OrderTypeHAS::getCurrencyNames)
+                .flatMap(List::stream)
+                .toList();
+        System.out.println(currencyListOfStrings);
 
     }
 }
